test/spec_vectors/simd_f32x4_arith/fail/module_2.wat
(module (func (result v128) (f32x4.neg (i32.const 0))))